@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-31T16:19:11Z",
+  "timestamp" : "2022-08-01T01:44:56Z",
   "count_outdated" : 426,
   "uniques_outdated" : 245,
-  "count" : 455,
+  "count" : 456,
   "uniques" : 261,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-07-31T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
