@@ -1,5 +1,5 @@
 {
-  "count": 29,
+  "count": 30,
   "uniques": 4,
   "clones": [
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2022-07-31T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
